# Visual_Assessment_Tasks

./: README.md
.history/math/: README_20240202020529.md  README_20240203173538.md
BigDeal/: README.md
C++/: README.md  main.cpp
C++/LanguageQuestion/: question_first.cpp  question_second.cpp  question_third.cpp
C++/LanguageQuestion/task1/: solution_first.cpp
C++/LanguageQuestion/task2/: solution_second.cpp
C++/LanguageQuestion/task3/: solution_third.cpp
C++/MAT/: CMakeLists.txt  matrix.cpp  matrix.h
C++/thread/: thread.cpp
Deeplearning/: README.md  Tutorial.md
math/: README.md
opencv/: README.md
opencv/hw1/: CMakeLists.txt  method1.cpp  method2.cpp  method3.cpp
opencv/hw2/: code.cpp
opencv/hw3/: code.cpp
opencv/hw4/: code.cpp
opencv/hw5/: CMakeLists.txt  code.cpp
opencv/hw6/: code.cpp
opencv/hw7/: CMakeLists.txt  code1.cpp  code2.cpp
opencv/hw8/: code.cpp
